fix: fix scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,11 +7,11 @@
 }
 
 ::-webkit-scrollbar-track {
-  @apply bg-transparent;
+  @apply bg-white;
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-white;
+  @apply bg-black;
 }
 
 ::selection {
